<?xml version="1.0" encoding="utf-8"?>
<!-- 
 Android-Freeciv - Copyright (C) 2010 - C Vaughn
   This program is free software; you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation; either version 2, or (at your option)
   any later version.

   This program is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.
 --> 
<ScrollView android:layout_width="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent">
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:orientation="vertical">
		<TextView android:layout_height="wrap_content" android:id="@+id/player_name"
			android:layout_width="fill_parent"></TextView>
		<TextView android:layout_height="wrap_content" android:id="@+id/nation_name"
			android:layout_width="fill_parent"></TextView>						
		<ImageView android:layout_height="wrap_content" android:id="@+id/player_flag" android:layout_width="fill_parent" android:fadingEdge="none" android:scaleType="fitEnd"></ImageView>
		<TextView android:layout_height="wrap_content" android:id="@+id/turn_count"
			android:layout_width="fill_parent"></TextView>
		<TextView android:layout_height="wrap_content" android:id="@+id/last_bulbs"
			android:layout_width="fill_parent"></TextView>			
			
			
	<LinearLayout android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="fill_parent" android:onClick="clickGovernment" android:background="@drawable/clickable_highlights"><ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/government_type_icon"></ImageView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/government_type_name"></TextView></LinearLayout>
	<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="match_parent">
		<TextView android:paddingRight="5sp" android:text="@string/username" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
		<TextView android:id="@+id/username" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
	</LinearLayout>
	<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="match_parent">
		<TextView android:paddingRight="5sp" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/year"></TextView>
		<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/year"></TextView>
	</LinearLayout>
	<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="match_parent">
		<TextView android:paddingRight="5sp" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/gold"></TextView>
		<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/gold"></TextView>
	</LinearLayout>
	<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="match_parent">
		<TextView android:paddingRight="5sp" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/population"></TextView>
		<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/population"></TextView>
	</LinearLayout>
	<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="match_parent">
		<TextView android:paddingRight="5sp" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/score"></TextView>
		<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/score"></TextView>
	</LinearLayout>			
<include android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/impr_info" layout="@layout/imprinfo"></include><ProgressBar android:layout_height="wrap_content" style="?android:attr/progressBarStyleHorizontal" android:max="100" android:id="@+id/tech_progress" android:layout_width="fill_parent"></ProgressBar><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/research_progress"></TextView>


<!-- <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Diplomacy" android:onClick="showDiplomacy"></Button> -->
</LinearLayout>






</ScrollView>
